# EngyBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/seed/: course_units.json  grammar_units.json  word_sets.json
docs/: architecture.md  backlog.md  database.md  project-overview.md  team-roles.md  user-flow.md
src/bot/: __init__.py  config.py  main.py
src/bot/database/: models.py  session.py
src/bot/handlers/: __init__.py  course.py  practice.py  start.py
src/bot/keyboards/: main_menu.py
src/bot/services/: content.py
src/bot/states/: onboarding.py  training.py
