[project]
name = "engybot"
version = "0.1.0"
description = "Telegram bot MVP for learning foreign languages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.18.0,<4.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
